--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
 [build]
   base = "uniqus-website"
-  publish = "uniqus-website"
-  functions = "uniqus-website/.netlify/functions"
+  functions = "/.netlify/functions"
